--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <maven.compiler.target>16</maven.compiler.target>
  	</properties>
 	<scm>
-		<url>https://github.com/arpitaggarwal/maven-release-plugin-example</url>
-		<connection>scm:git:https://github.com/arpitaggarwal/maven-release-plugin-example.git</connection>
+		<url>https://github.com/mbenachour/maven-release-example.git</url>
+		<connection>scm:git:https://github.com/mbenachour/maven-release-example.git</connection>
       <tag>HEAD</tag>
   </scm>
 	
