--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,18 @@
 #release configuration
-#Sun Aug 22 14:28:55 PDT 2021
+#Sun Aug 22 14:30:11 PDT 2021
 projectVersionPolicyId=default
-scm.tagNameFormat=v@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-scm.tag=v0.6
-completedPhase=check-poms
+project.rel.com.test\:maven-release-plugin-example=0.6
+project.scm.com.test\:maven-release-plugin-example.connection=scm\:git\:git@github.com\:mbenachour/maven-release-example.git
+project.scm.com.test\:maven-release-plugin-example.url=https\://github.com/mbenachour/maven-release-example.git
+completedPhase=end-release
 scm.url=scm\:git\:git@github.com\:mbenachour/maven-release-example.git
+scm.tagNameFormat=v@{project.version}
+pushChanges=true
+project.dev.com.test\:maven-release-plugin-example=0.7-SNAPSHOT
+project.scm.com.test\:maven-release-plugin-example.developerConnection=scm\:git\:git@github.com\:mbenachour/maven-release-example.git
+scm.tag=v0.6
 exec.snapshotReleasePluginAllowed=false
+project.scm.com.test\:maven-release-plugin-example.tag=HEAD
 preparationGoals=clean verify
