--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.test</groupId>
 	<artifactId>maven-release-plugin-example</artifactId>
-	<version>0.2</version>
+	<version>0.7.8-SNAPSHOT</version>
 	<properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
@@ -11,7 +11,7 @@
 		<url>https://github.com/mbenachour/maven-release-example.git</url>
 		<connection>scm:git:git@github.com:mbenachour/maven-release-example.git</connection>
 		<developerConnection>scm:git:git@github.com:mbenachour/maven-release-example.git</developerConnection>
-      <tag>v${releaseVersion}</tag>
+      <tag>HEAD</tag>
   </scm>
 	
 	<!-- Repository Information -->
@@ -22,61 +22,6 @@
 			<url>http://localhost:8081/repository/api-release</url>
 		</repository>
 	</distributionManagement>
-	<profiles>
-		<profile>
-			<id>test</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.1</version>
-						<executions>
-							<execution>
-								<phase>test</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<tasks>
-										<echo>Using env.test.properties</echo>
-										<!-- Using predefined maven properties mentioned in https://github.com/arpitaggarwal/predefined_maven_properties -->
-										<copy file="src/main/resources/env.test.properties" tofile="${project.build.outputDirectory}/env.properties" />
-									</tasks>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>releases</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.5.1</version>
-						<executions>
-							<execution>
-								<id>default-deploy</id>
-								<phase>deploy</phase>
-								<goals>
-									<goal>deploy</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<serverId>nexus-releases</serverId>
-							<nexusUrl>http://localhost:8081/</nexusUrl>
-							<skipStaging>true</skipStaging>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 	<build>
 	 <pluginManagement>
 		<plugins>
